Make sure code in the table is not wrapped
This makes developer pages a lot more readable.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -77,3 +77,7 @@ table td {
 table code, table pre {
   word-break: break-word;
 }
+
+table td:first-child > code {
+  white-space: nowrap;
+}
